--- a/templates/index.html
+++ b/templates/index.html
@@ -631,8 +631,14 @@
                                         <i class="fas fa-lock"></i> Password
                                     </label>
                                     <input type="password" id="new-password" name="password"
-                                           minlength="8" required
-                                           placeholder="Minimum 8 characters">
+                                           minlength="12" required
+                                           placeholder="Enter a strong password">
+                                    <div id="password-requirements" class="password-requirements">
+                                        <h5><i class="fas fa-shield-alt"></i> Password Requirements</h5>
+                                        <ul>
+                                            <li id="req-length"><i class="fas fa-circle"></i> Loading...</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="new-role">
